# torzoid

./: BENCHMARKS.md  COMMERCIAL_LICENSE_TEMPLATE.md  COMMERCIAL_MODEL.md  LICENSE  LICENSING.md  README.md  README_FULL.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BENCHMARK_TARGETS.md  DEPLOYMENT_ROADMAP.md  FRACTAL_CHANNEL_MEMORY.md  FRACTAL_CHANNEL_MEMORY_SIM_RESULTS.md  MODULES_AND_APIS.md  PERFORMANCE_TEST_MATRIX.md  ROLLOUT_PLAN.md  TORZOID_HOME_PRODUCT_SPEC.md
scripts/: benchmark_memory.py
src/torzoid/: __init__.py  cli.py  smart_store.py  store.py
tests/: test_smart_store.py  test_store.py
